--- a/Final_Project/.vscode/settings.json
+++ b/Final_Project/.vscode/settings.json
@@ -73,6 +73,8 @@
         "vector": "cpp",
         "algorithm": "cpp",
         "__tree": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "list": "cpp",
+        "map": "cpp"
     }
 }
