--- a/Final_Project/astroObject.dSYM/Contents/Info.plist
+++ b/Final_Project/astroObject.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.starCatalogue</string>
+		<string>com.apple.xcode.dsym.astroObject</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
